--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -795,7 +795,7 @@
                   <number>0</number>
                  </property>
                  <item>
-                  <widget class="QTextBrowser" name="textBrowser_recv"/>
+                  <widget class="QPlainTextEdit" name="plainTextEdit_recv"/>
                  </item>
                 </layout>
                </widget>
