--- a/recvareaform.ui
+++ b/recvareaform.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>502</width>
     <height>300</height>
    </rect>
   </property>
@@ -90,6 +90,9 @@ QTabBar::tab:disabled {
           <string>文本接收</string>
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout_3">
+          <property name="spacing">
+           <number>2</number>
+          </property>
           <property name="leftMargin">
            <number>0</number>
           </property>
@@ -107,6 +110,93 @@ QTabBar::tab:disabled {
             <property name="frameShape">
              <enum>QFrame::NoFrame</enum>
             </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QWidget" name="widget_recvTool" native="true">
+            <property name="styleSheet">
+             <string notr="true">#widget_recvTool{
+	background-color:rgb(230, 230, 230);
+    border-width:1px;
+    border-radius:3px;
+
+}</string>
+            </property>
+            <layout class="QHBoxLayout" name="horizontalLayout">
+             <property name="spacing">
+              <number>2</number>
+             </property>
+             <property name="leftMargin">
+              <number>2</number>
+             </property>
+             <property name="topMargin">
+              <number>2</number>
+             </property>
+             <property name="rightMargin">
+              <number>2</number>
+             </property>
+             <property name="bottomMargin">
+              <number>2</number>
+             </property>
+             <item>
+              <widget class="QCheckBox" name="checkBox_ShowHex">
+               <property name="text">
+                <string>Hex</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="checkBox_ShowDate">
+               <property name="text">
+                <string>时间戳</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="checkBox_RecvFile">
+               <property name="text">
+                <string>接收到文件</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="checkBox_SendShow">
+               <property name="text">
+                <string>发送回显</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QLabel" name="label">
+               <property name="text">
+                <string>编码格式</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QComboBox" name="comboBox_codec"/>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pushButton_ClearRecv">
+               <property name="text">
+                <string>清空接收区</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
