--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,0">
     <property name="spacing">
      <number>0</number>
     </property>
@@ -30,6 +30,16 @@
     <property name="bottomMargin">
      <number>0</number>
     </property>
+    <item>
+     <widget class="IOSettingsForm" name="widget_IOSetting" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
+    </item>
     <item>
      <widget class="QWidget" name="widget_2" native="true">
       <property name="styleSheet">
@@ -62,7 +72,7 @@
         </widget>
        </item>
        <item>
-        <widget class="IOSettingsForm" name="widget_IOSetting" native="true">
+        <widget class="IOSettingsForm" name="widget_IOSetting3" native="true">
          <property name="minimumSize">
           <size>
            <width>40</width>
